--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
       <div class="quiz_header">
         <h1>Atlanta Braves Quiz</h1>
-        <h2>0/10</h2>
+        <h2>Score: 0/10</h2>
       </div>
     </header>
     <main role="main">
@@ -39,13 +39,6 @@
               <li><a href="finalScore.html">Final Score WireFrame</a></li>
           </ul>
       </div>
-      <!-- <div class="container">
-            <div class="question">Question</div>
-            <div class="answer">Answer Choice</div>
-            <div class="answer">Answer Choice</div>
-            <div class="answer">Answer Choice</div>
-            <div class="answer">Answer Choice</div>
-        </div> -->
     </main>
     <!-- <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
