--- a/finalScore.html
+++ b/finalScore.html
@@ -15,7 +15,7 @@
     <header>
       <div class="quiz_header">
         <h1>Atlanta Braves Quiz</h1>
-        <h2>Score: 0/10</h2>
+        <!-- <h2>Score: 0/10</h2> -->
       </div>
     </header>
     <main role="main">
